gcc/testsuite/rust/rustc/ui/parser/diff-markers/enum_dg.rs
enum E {
<<<<<<< HEAD // { dg-error "" "" { target *-*-* } }
    Foo(u8),
=======
    Bar(i8),
>>>>>>> branch
}

